--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,14 +10,13 @@
 
     // Bundler mode
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
 
     // Best practices
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
+    "declaration": true,
 
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
@@ -26,7 +25,16 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["backend/src/*"]
-    }
-  }
+      "@/*": ["src/*"]
+    },
+    "outDir": "out",
+
+    "composite": true,
+
+    "plugins": [
+      { "transform": "typescript-transform-paths" },
+      { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
+  },
+  "include": ["src/**/*.ts"]
 }
