--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
     "superjson": "^2.2.1",
     "uuid": "^9.0.1",
     "vec3": "^0.1.10",
-    "zod": "^3.23.8"
+    "ws": "^8.17.0",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.0"
   }
 }
